fix static build

--- a/src/locales/de/layout.json
+++ b/src/locales/de/layout.json
@@ -1,13 +1,13 @@
 {
-  "about": "Über",
+  "about": "Über uns",
   "blog": "Blog",
   "contact": "Kontakt",
   "demo": "Demo",
-  "features": "Funktionen",
+  "features": "Features",
   "login": "Einloggen",
   "pricing": "Preise",
   "product": "Produkt",
-  "signup": "Anmelden",
+  "signup": "Registrieren",
   "testimonials": "Referenzen",
   "theFuture": "Die Zukunft"
 }
