--- a/src/locales/en/layout.json
+++ b/src/locales/en/layout.json
@@ -7,7 +7,7 @@
   "login": "Login",
   "pricing": "Pricing",
   "product": "Product",
-  "signup": "Sign Up",
+  "signup": "Signup",
   "testimonials": "Testimonials",
   "theFuture": "The Future"
 }
