--- a/src/locales/de/layout.json
+++ b/src/locales/de/layout.json
@@ -5,7 +5,7 @@
   "demo": "Demo",
   "features": "Features",
   "login": "Einloggen",
-  "pricing": "Preise",
+  "pricing": "Preis",
   "product": "Produkt",
   "signup": "Registrieren",
   "testimonials": "Referenzen",
