--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -7,12 +7,12 @@
     "advisors": "Berater",
     "backedBy": "Unterstützt von führenden Investoren",
     "ben": "Hintergrund in Materialwissenschaften, Kampfkunst und fasziniert von Elektroautos",
-    "elena": "Anwalt für M&A und Private Equity mit Fokus auf Rechtsberatung für Startups, Smartuplaw.ch",
-    "findOutAboutOurMission": "Erfahre mehr über unsere Mission und lerne uns Team und unsere Berater kennen",
+    "elena": "Anwältin für M&A und Private Equity mit Fokus auf Rechtsberatung für Startups, Smartuplaw.ch",
+    "findOutAboutOurMission": "Erfahre mehr über unsere Mission und lerne unser Team und unsere Berater kennen",
     "luzius": "Gründer von Meisser Economics, Bitcoin Association Switzerland, and Wuala",
     "myke": "Entrepreneur, Business Angel, Gründer von Doodle.com",
     "ourMission": "Unsere Mission",
-    "ourMissionDescription": "Wir wollen Entrepreure stärken. Sie sollen sich auf ihr Geschäft konzentrieren können, nicht auf bürokratischen Papierkram. Aus diesem Grund möchten wir ein neues, hochmodernes Tool für die Verwaltung, den Austausch und den Handel von Aktien in privaten Unternehmen schaffen. Unser Ziel ist es, das Aktienmanagement für Unternehmen und Aktionäre zu einem Kinderspiel zu machen.",
+    "ourMissionDescription": "Wir wollen Entrepreneure stärken. Sie sollen sich auf ihr Geschäft konzentrieren können, nicht auf bürokratischen Papierkram. Aus diesem Grund möchten wir ein neues, hochmodernes Tool für die Verwaltung, den Austausch und den Handel von Aktien in privaten Unternehmen schaffen. Unser Ziel ist es, das Aktienmanagement für Unternehmen und Aktionäre zu einem Kinderspiel zu machen.",
     "paul": "Entrepreneur, Technologist, Gründer von Doodle.com",
     "team": "Team",
     "timo": "Experte für Computer Vision, Badminton-Spieler, will einen Weltraumaufzug bauen",
@@ -24,14 +24,14 @@
   "comingSoon": "Bald verfügbar",
   "contact": "Kontakt",
   "contactPage": {
-    "getInTouch": "Kontaktiere Sie uns",
-    "giveUsACall": "Rufen Sie uns an oder kommen sie einfach vorbei. Wir werden unser Bestes geben, alle Anfragen innerhalb von 24 Stunden zu beantworten.",
-    "hereAreTheWays": "Hier sind die Möglichkeiten, wie Sie uns bei Fragen kontaktieren können",
+    "getInTouch": "Kontaktiere uns",
+    "giveUsACall": "Rufe uns an oder komm einfach vorbei. Wir werden unser Bestes geben, alle Anfragen innerhalb von 24 Stunden zu beantworten.",
+    "hereAreTheWays": "Hier sind die Möglichkeiten, wie du uns bei Fragen kontaktieren kannst",
     "postcode": "CH-8008 Zürich",
     "send": "Anfrage senden",
-    "yourEmail": "Ihre E-mail",
-    "yourMessage": "Ihr Nachricht",
-    "yourName": "Ihr Name"
+    "yourEmail": "Deine E-mail",
+    "yourMessage": "Deine Nachricht",
+    "yourName": "Dein Name"
   },
   "convertibles": "Wandeldarlehen und Mitarbeiteroptionen",
   "convertiblesDescription": "Erstelle ein Wandeldarlehen, Ledgy übernimmt alle notwendigen berechnungen. Erfasse deine Mitarbeiterbeteiligungspläne und verfolge ihre Entwicklung.",
