--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -42,7 +42,7 @@
   "exportDescription": "Nach Schweizer Gesetz muss das Aktienregister vom Verwaltungsrat unterschrieben sein, damit es gültig ist. Dafür kannst du einfach ein PDF herunterladen. Generiere Steuerbescheinigungen und sende sie per Knopfdruck an alle Aktionäre.",
   "features": "Funktionen",
   "firstMonthFree": "Erster Monat gratis",
-  "keywords": "Aktien, Aktienbuch, Aktienregister, Captable, Shareholder, Startup",
+  "keywords": "Aktien, Aktienbuch, Aktienregister, Captable, Shareholder, Startup, Finanzierungsrunden",
   "login": "Einloggen",
   "pricing": "Preis",
   "product": "Produkt",
