--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -40,9 +40,9 @@
   "enterEmail": "Enter email …",
   "export": "Export PDFs and send tax certificates",
   "exportDescription": "Per Swiss law, a share register must be signed by the board of directors to be valid. For this purpose, it can be exported as a PDF. Automatically generate tax certificates and send them to your shareholders.",
-  "features": "features",
+  "features": "Features",
   "firstMonthFree": "First month free",
-  "keywords": "cap table, stock ledger, shares register",
+  "keywords": "cap table, stock ledger, shares register, simulation, round modeling, equity",
   "login": "Login",
   "pricing": "Pricing",
   "product": "Product",
