--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -15,7 +15,7 @@
     "ourMissionDescription": "We want to empower entrepreneurs. They should be able to focus on their business, not on bureaucratic paperwork. This is why we want to establish a new, state-of-the-art tool to manage, exchange, and trade securities in private companies. Our goal is to make shares management a breeze for both companies and shareholders.",
     "paul": "Entrepreneur, Technologist, Founder of Doodle.com",
     "team": "Team",
-    "timo": "Computer vision background, badminton guy, wants to build a space elevators",
+    "timo": "Computer vision background, badminton guy, wants to build a space elevator",
     "whoWeAre": "Who we are",
     "yoko": "Medical physics background, loves running, wondering about brain-machine interfaces"
   },
