update pricing and stuff (#39)
* update pricing and stuff

* hack to fix packages

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -36,7 +36,7 @@
   "convertibles": "Wandeldarlehen und Mitarbeiteroptionen",
   "convertiblesDescription": "Erstelle ein Wandeldarlehen, Ledgy übernimmt alle notwendigen berechnungen. Erfasse deine Mitarbeiterbeteiligungspläne und verfolge ihre Entwicklung.",
   "demo": "Demo",
-  "description": "Vereinfache dein Leben mit dem besten online Aktienregister der Schweiz!",
+  "description": "Macht dein Aktienregister in Excel mal wieder Probleme? Lehn’ dich zurück und nutze Ledgy.",
   "enterEmail": "Email-Adresse …",
   "export": "Exportiere PDF-Dokumente und versende Steuerbescheinigungen",
   "exportDescription": "Nach Schweizer Gesetz muss das Aktienregister vom Verwaltungsrat unterschrieben sein, damit es gültig ist. Dafür kannst du einfach ein PDF herunterladen. Generiere Steuerbescheinigungen und sende sie per Knopfdruck an alle Aktionäre.",
