work on features

--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -30,30 +30,43 @@
   "You create convertible notes, Ledgy takes care of all the calculations. Enter employee incentive plans with vesting and track them over time.": "",
   "Export PDFs and send tax certificates": "",
   "Per Swiss law, a share register must be signed by the board of directors to be valid. For this purpose, it can be exported as a PDF. Automatically generate tax certificates and send them to your shareholders.": "",
+  "name": "",
   "The Future": "",
   "Coming Soon": "",
   "We’re working hard to bring new features online for you in the next couple of months!": "",
   "Shareholder Login": "",
   "Your shareholders will be able to see all of their investments at any time on Ledgy.": "",
-  "site.title": "Online Aktienbuch",
-  "site.description": "Vereinfache dein Leben mit dem besten online Aktienregister der Schweiz!",
-  "Enter email …": "",
-  "Try for free": "",
-  "Check out our demo app": "",
-  "Demo": "",
+  "Online Captable —<0/> Excel was yesterday": "",
+  "Having headaches with your cap table in Excel? Use Ledgy to track all your shares, manage your ESOP and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "",
+  "Get Started": "",
   "Pricing": "",
   "As straightforward as the tool. One package, everything included.": "",
   "First month free<0/>Then 19 CHF/month per company": "",
   "Sign up now": "",
+  "You’re in good company": "",
+  "Stay up to date": "",
+  "Email Adress": "",
+  "Why Ledgy?": "",
+  "Blog": "",
+  "Sign In": "",
+  "Contact": "",
+  "Round Modeling": "",
+  "ESOP": "",
+  "Consistency": "",
+  "Reporting": "",
+  "Investors/Employees": "",
+  "site.title": "Online Aktienbuch",
+  "site.description": "Vereinfache dein Leben mit dem besten online Aktienregister der Schweiz!",
+  "site.keywords": "",
+  "Enter email …": "",
+  "Try for free": "",
+  "Check out our demo app": "",
+  "Demo": "",
   "Testimonials": "",
   "Switzerland’s best companies manage their cap table with Ledgy.": "",
-  "Stay up to date": "",
   "Subscribe": "",
   "Product": "",
   "About": "",
-  "Contact": "",
-  "Blog": "",
   "Login": "",
-  "Signup": "",
-  "site.keywords": ""
+  "Signup": ""
 }
