--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -30,30 +30,45 @@
   "You create convertible notes, Ledgy takes care of all the calculations. Enter employee incentive plans with vesting and track them over time.": "You create convertible notes, Ledgy takes care of all the calculations. Enter employee incentive plans with vesting and track them over time.",
   "Export PDFs and send tax certificates": "Export PDFs and send tax certificates",
   "Per Swiss law, a share register must be signed by the board of directors to be valid. For this purpose, it can be exported as a PDF. Automatically generate tax certificates and send them to your shareholders.": "Per Swiss law, a share register must be signed by the board of directors to be valid. For this purpose, it can be exported as a PDF. Automatically generate tax certificates and send them to your shareholders.",
+  "name": "name",
   "The Future": "The Future",
   "Coming Soon": "Coming Soon",
   "We’re working hard to bring new features online for you in the next couple of months!": "We’re working hard to bring new features online for you in the next couple of months!",
   "Shareholder Login": "Shareholder Login",
   "Your shareholders will be able to see all of their investments at any time on Ledgy.": "Your shareholders will be able to see all of their investments at any time on Ledgy.",
-  "site.title": "Online Cap Table",
-  "site.description": "Make your life easy with the leading cap table tool in Switzerland.",
-  "Enter email …": "Enter email …",
-  "Try for free": "Try for free",
-  "Check out our demo app": "Check out our demo app",
-  "Demo": "Demo",
+  "Online Captable —<0/> Excel was yesterday": "Online Captable —<0/> Excel was yesterday",
+  "Having headaches with your cap table in Excel? Use Ledgy to track all your shares, manage your ESOP and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Having headaches with your cap table in Excel? Use Ledgy to track all your shares, manage your ESOP and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.",
+  "Get Started": "Get Started",
   "Pricing": "Pricing",
   "As straightforward as the tool. One package, everything included.": "As straightforward as the tool. One package, everything included.",
   "First month free<0/>Then 19 CHF/month per company": "First month free<0/>Then 19 CHF/month per company",
   "Sign up now": "Sign up now",
+  "You’re in good company": "You’re in good company",
+  "Stay up to date": "Stay up to date",
+  "Email Adress": "Email Adress",
+  "Why Ledgy?": "Why Ledgy?",
+  "Blog": "Blog",
+  "Sign In": "Sign In",
+  "Contact": "Contact",
+  "Round Modeling": "Round Modeling",
+  "ESOP": "ESOP",
+  "Consistency": "Consistency",
+  "Reporting": "Reporting",
+  "Investors/Employees": "Investors/Employees",
+  "site.name": "Ledgy",
+  "site.title": "Online Cap Table",
+  "site.slogan": "Excel was yesterday",
+  "site.description": "Make your life easy with the leading cap table tool in Switzerland.",
+  "site.keywords": "cap table, stock ledger, shares register, simulation, round modeling, equity",
+  "Enter email …": "Enter email …",
+  "Try for free": "Try for free",
+  "Check out our demo app": "Check out our demo app",
+  "Demo": "Demo",
   "Testimonials": "Testimonials",
   "Switzerland’s best companies manage their cap table with Ledgy.": "Switzerland’s best companies manage their cap table with Ledgy.",
-  "Stay up to date": "Stay up to date",
   "Subscribe": "Subscribe",
   "Product": "Product",
   "About": "About",
-  "Contact": "Contact",
-  "Blog": "Blog",
   "Login": "Login",
-  "Signup": "Signup",
-  "site.keywords": "cap table, stock ledger, shares register, simulation, round modeling, equity"
+  "Signup": "Signup"
 }
